# litigation-outcome-pipeline

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CLAUDE.md  INTEGRATION_CHECKLIST.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  QUICK_REFERENCE.sh  README.md  RUNNING.md  VERCEL_DEPLOYMENT.md  dataset.csv  dataset.json  environment.yaml  environment.yml  labels.json  lexratio.html  mlflow.db  package.json  pyproject.toml  ruff_output.txt  vercel.json
.claude/: settings.local.json
api/: CLAUDE.md  __init__.py  app.py  dependencies.py  prompts.py  schemas.py
counterfactual/: CLAUDE.md  analyzer.py
data/: CLAUDE.md  cleaning.py  storage.py  validation.py
deep-dive/: full-project-2026-04-16.md  label-extraction-and-pdf-pipeline-2026-04-16.md  training-pipeline-2026-04-28.md
docker/: CLAUDE.md  Dockerfile.features  Dockerfile.inference  docker-compose.yml
features/: CLAUDE.md  config.py  extraction.py  labels.py  prompts.py  schema.py
features_cache/: 04c6dc344681f03f.json  08d274fb0ec82728.json  0947944b9c2e03b6.json  0d29206ac2adbecc.json  142d304148502814.json  17d91eb4a3d1e257.json  19f2d5359ecfe932.json  1c8f5ab8bb64b56c.json  1dbcbd5714b0bdce.json  210e6aa0da03c34c.json  2c382bce739fa5eb.json  34b7db78039d76ce.json  35eea3119ea76c0b.json  36d0884585fad0be.json  38a219a8d304d904.json  3bfbcc81a49a85be.json  41edec997d642774.json  44362c897a97399b.json  4a2374818060ebc5.json  4c33e04445469eff.json  5a28d7b0a240dafc.json  5eccffbcd8dad491.json  644897d57f154d03.json  65179098106c753b.json  653cf9322dbafb46.json  67945fc3c936d5f4.json  6acbcf88f797ead0.json  74a6068969a63141.json  751c75ecf3512b8a.json  889a009a6b8cdbf1.json  92cef1c3a89a9abf.json  93000b589a93a425.json  986fefe842374adf.json  9d53c3a136d6028e.json  9eb54879e9c1450b.json  9f89e222240273b6.json  a227ace296cd434b.json  a61b58c3019f71dc.json  a63d1a3b123f69cf.json  a91302e8f48d5917.json  (+25 more)
features_cache 2/: 015f93dedc6b08e9.json  03594457eedb5911.json  078d71e4fcbd313b.json  081f428af8291ba4.json  0a1bffc3ae973481.json  0b65269306b7298c.json  101ac8f405be8816.json  105b126e186d7af2.json  10a02bf2dc3fe5b7.json  1125a9c2a4f30880.json  1736fb53b85453b7.json  177937c733fa6051.json  19e115b8db909fd2.json  1a14617ececb7507.json  1a659d712c5c01b9.json  1ba2b7a4d0f52844.json  1c78590ccc8ea697.json  1ea73dff4e17ff7b.json  23e75ab2f6383f00.json  249bfa5774c00d07.json  25079baacb4e9016.json  2c2e2e51b2b1e3e6.json  3090ad54bc4f20b0.json  3498a48d0a4bd114.json  35eea3119ea76c0b.json  38567ce18ddad6eb.json  3ab08dc4891f2702.json  3acafab27f3b963f.json  3c0505109a7f3a5a.json  3f181f6866f17452.json  3f234d5b86517e73.json  450ee37668d23a2f.json  481c556c7f17c6a7.json  49b92dca09c7b5d4.json  4a97904585ad5e1b.json  4bea4e60244ac830.json  4d3012343e359518.json  4ef4221d16c61953.json  4f07dcf1ec49e2d4.json  51751699c8cd772c.json  (+84 more)
infra/: CLAUDE.md  ecs.tf  main.tf  outputs.tf  s3.tf  variables.tf
labels 2/: 00e9314b9792916f.json  024fd5906e415d14.json  03c7474be44cc574.json  03cc6098dde6156c.json  03d9f0e680854103.json  03e0c75a5df207ff.json  0408879c20d1f59c.json  0532233f803a40c2.json  05da48d337a41c16.json  06272e07ee188411.json  077f63084eae339e.json  09b0408760b8bd87.json  0a8ee378a2e81fa2.json  0b4f2171b2030d7d.json  0d70b893f45036d4.json  0f218d4f41ed4a18.json  109e41ac3e908d9d.json  11ea18a4798a86ca.json  125acf7c30a12bcd.json  127783d716a6454e.json  12d90a5fe17b2c68.json  142684a53aa33d6e.json  1477383158d6bbb4.json  1560483400a5bd1a.json  16ba37fce3a609c8.json  179f6a617f4ca290.json  19bcad6d3db30c16.json  1b6c7c852940b9a6.json  1c5675ce2e7d6d7e.json  (+593 more)
(+4095 files in other folders)
