[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litigation-outcome-pipeline"
version = "0.1.0"
description = "End-to-end ML system for predicting small claims court case outcomes"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "pymupdf>=1.24",
    "openai>=1.50",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "eval-type-backport>=0.2; python_version < '3.10'",
    "mlflow>=2.11",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sentence-transformers>=2.5",
    "faiss-cpu>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
scrape = "scraper.cli:main"

[tool.setuptools.packages.find]
include = ["scraper*", "data*", "features*", "models*", "api*", "retrieval*", "counterfactual*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
